--- a/android/local.properties
+++ b/android/local.properties
@@ -1,4 +1,4 @@
 sdk.dir=C:\\Users\\willi\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\Users\\willi\\flutter
+flutter.sdk=C:\\Users\\willi\\Flutter\\flutter
 flutter.buildMode=debug
 flutter.versionName=0.1.0
