--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,34 +1,44 @@
 name: god_roll_app
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.2.0 <4.0.0'
+  sdk: ">=3.2.0 <4.0.0"
 
 dependencies:
-  firebase_core: ^2.25.4
+  carousel_slider: ^4.2.1
+  firebase_core: ^3.1.1
   flutter_web_auth_2: ^3.1.1
   socket_io_client: ^2.0.0-beta.4
-  firebase_messaging: ^14.7.16
-  firebase_analytics: ^10.8.10
-  flutter_svg: ^0.22.0
+  firebase_messaging: ^15.0.2
+  firebase_analytics: ^11.1.0
+  flutter_svg: ^2.0.10+1
   provider: ^6.1.2
   google_fonts: ^6.2.1
   google_mobile_ads: ^5.0.0
   auto_size_text: ^3.0.0
   http: ^1.2.0
-  connectivity_plus: ^6.0.1
+  path_provider: ^2.1.2
+  path: ^1.9.0
+  shared_preferences: ^2.2.3
+  hive: ^2.2.3
+  cloud_firestore: ^5.0.2
+  sqflite: ^2.3.3+1
+  bungie_api: ^13.18.0
+  flutter_secure_storage: ^9.2.2
+  flutter_dotenv: ^5.1.0
   flutter:
     sdk: flutter
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.1
+  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
-  assets: 
+  assets:
+    - .env
     - assets/icons/
     - assets/images/
