--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   bungie_api: ^13.18.0
   flutter_secure_storage: ^9.2.2
   flutter_dotenv: ^5.1.0
+  intl: ^0.19.0
   flutter:
     sdk: flutter
 
@@ -42,3 +43,31 @@ flutter:
     - .env
     - assets/icons/
     - assets/images/
+
+  fonts:
+    - family: NeueHaasDisplay
+      fonts:
+        - asset: assets/fonts/NeueHaasDisplayBlack.ttf
+        - asset: assets/fonts/NeueHaasDisplayBlackItalic.ttf
+          style: italic
+        - asset: assets/fonts/NeueHaasDisplayBold.ttf
+        - asset: assets/fonts/NeueHaasDisplayBoldItalic.ttf
+          style: italic
+        - asset: assets/fonts/NeueHaasDisplayLight.ttf
+        - asset: assets/fonts/NeueHaasDisplayLightItalic.ttf
+          style: italic
+        - asset: assets/fonts/NeueHaasDisplayMedium.ttf
+        - asset: assets/fonts/NeueHaasDisplayMediumItalic.ttf
+          style: italic
+        - asset: assets/fonts/NeueHaasDisplayRoman.ttf
+        - asset: assets/fonts/NeueHaasDisplayRomanItalic.ttf
+          style: italic
+        - asset: assets/fonts/NeueHaasDisplayThin.ttf
+        - asset: assets/fonts/NeueHaasDisplayThinItalic.ttf
+          style: italic
+        - asset: assets/fonts/NeueHaasDisplayXThin.ttf
+        - asset: assets/fonts/NeueHaasDisplayXThinItalic.ttf
+          style: italic
+        - asset: assets/fonts/NeueHaasDisplayXXThin.ttf
+        - asset: assets/fonts/NeueHaasDisplayXXThinItalic.ttf
+          style: italic
